// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PokerPlayer > renders correctly when show estimate is false 1`] = `
<div
  class="bg-gray-800 border-gray-800 rounded-2xl border-2 justify-between flex sm:flex-col-reverse w-80 sm:w-64 items-center px-6 py-4 space-x-2 sm:space-x-0"
>
  <div
    class="sm:mt-4"
  >
    <h3
      class="text-base font-semibold leading-7 tracking-tight text-white whitespace-nowrap truncate"
    >
      Constance Wu
    </h3>
  </div>
  <div>
    <div
      class="relative"
    >
      <img
        alt="avatar"
        class="ring-4 ring-indigo-600 h-16 w-16 sm:h-32 sm:w-32 shrink-0 rounded-full bg-white"
        src="data:image/svg+xml;utf8,image-url"
      />
      <span
        class="absolute right-0 top-0 sm:right-1 sm:top-1 block h-4 sm:h-6 w-4 sm:w-6 rounded-full bg-indigo-600 ring-2 ring-white text-white"
      >
        <render-stub />
      </span>
    </div>
  </div>
</div>
`;

exports[`PokerPlayer > renders correctly when show estimate is true 1`] = `
<div
  class="bg-gray-800 border-gray-800 rounded-2xl border-2 justify-between flex sm:flex-col-reverse w-80 sm:w-64 items-center px-6 py-4 space-x-2 sm:space-x-0"
>
  <div
    class="sm:mt-4"
  >
    <h3
      class="text-base font-semibold leading-7 tracking-tight text-white whitespace-nowrap truncate"
    >
      Constance Wu
    </h3>
  </div>
  <div>
    <div
      class="bg-indigo-600 h-16 w-16 sm:h-32 sm:w-32 shrink-0 flex items-center justify-center rounded-full"
    >
      <span
        class="text-white font-mono font-semibold leading-7 tracking-tight text-xl sm:text-4xl"
      >
        3
      </span>
    </div>
  </div>
</div>
`;

exports[`PokerPlayer > renders correctly when there is no name 1`] = `
<div
  class="border-dashed border-gray-300 rounded-2xl border-2 justify-between flex sm:flex-col-reverse w-80 sm:w-64 items-center px-6 py-4 space-x-2 sm:space-x-0"
>
  <div
    class="sm:mt-4"
  >
    <div
      class="rounded-2xl w-32 h-3 my-2 bg-gray-300"
    />
  </div>
  <div>
    <div
      class="h-16 w-16 sm:h-32 sm:w-32 shrink-0 rounded-full bg-gray-300"
    />
  </div>
</div>
`;
